# ithome-iron-2020-django

./: .gitignore  LICENSE  README.md  example.http  manage.py  pyproject.toml  pytest.ini
django_ithome_ironman/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
foodbear/: apps.py  models.py  tasks.py
foodbear/migrations/: 0001_initial.py
news/: models.py  schema.py  serializers.py  tasks.py  tests.py  urls.py  views.py  viewsets.py
news/migrations/: 0001_initial.py
static/: project.css
templates/: base.html  home.html
treemenu/: apps.py  models.py  views.py
treemenu/migrations/: 0001_initial.py
treemenu/templates/treemenu/: treeview.html  treeview_pdf.html
